# ai-foundry-workshop

./: .gitignore  README.md  bootstrap_playwright.sh
.github/: copilot-instructions.md
01-foundamentals/: .env.example  .gitignore  00-clearup-threads.ipynb  01-enterprise-knowledge-agent.ipynb  02-medical-diagnostic-agent.ipynb  03-automated-evaluations.ipynb  03-cloud-eval-runs.ipynb  04-sequential-multiagent-tracing.ipynb  05-enterprsie-deepresearch-agent.ipynb  Activation.md  CreateVENV.md  README.md  alpha-cloud-eval-agent.ipynb  clearup-threads.ipynb  deprecated-06-medical-deepresearch-agent.ipynb  enterprise-knowledge-agent.ipynb  enterprise-streaming-agent.ipynb  eval_simple_1.ipynb  (+4 more)
01-foundamentals-v1/: 04-sequential-multiagent-tracing.ipynb  alpha-cloud-metrics-agent.ipynb  requirements_fdy.txt  requirements_fdy_agent.txt
01-foundamentals-v2/: 01-enterprise-knowledge-agent.ipynb  02-medical-diagnostic-agent.ipynb  04-sequential-multiagent-tracing.ipynb  05-enterprsie-deepresearch-agent.ipynb  README.md  alpha-cloud-eval-agent.ipynb  requirements_fdy.txt
01-foundamentals-v3/: .env.example  .gitignore  01-enterprise-knowledge-agent.ipynb  02-medical-diagnostic-agent.ipynb  03-sequential-workflow-agent.ipynb  03basic_workflow.py  04-automated-evaluations.ipynb  05-sequential-multiagent-tracing.ipynb  06-agent-auto-eval.ipynb  07-red-team-agent.ipynb  README.md  pyproject.toml  requirements.txt
01-foundamentals-v3/data/: med_agent_test_queries.jsonl  singleagentrun.jsonl
01-foundamentals-v3/infra/: custom-code-interpreter.bicep
01-foundamentals-v3/utils/: backup.py  blocklist_helper.py  enterprise_functions.py  fdyauth.py  model_client.py
02-sk-orchestration/: pyproject.toml
02-sk-orchestration/multi-agents-orch/: sk_concurrent.py  sk_group_chat_orchestration.py  sk_handoff.py  sk_magentic.py  sk_sequential.py  sk_x_azure.py
(+28 files in other folders)
